--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <td>
             <h1>Constantin Ilisescu</h1>
             <p>
-                <em>Steping on <strong> <a href="https://www.youtube.com/watch?v=75S_ErrMZ0c&t=2226s" target="_blank">
+                <em>Steping on the <strong> <a href="https://www.youtube.com/watch?v=75S_ErrMZ0c&t=2226s" target="_blank">
                 WebDevelopmnet</a></strong> learning path.</em>
             </p>
         </td>
